Se culmina la funcionalidad de la API, se exporta el archivo SQL para la Base de Datos, así como el contrato Swagger y la colección de Postman